--- a/app/components/job-list-item/job-list-item.component.scss
+++ b/app/components/job-list-item/job-list-item.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .job-list-container {
   width: 100%;
   border-bottom: 1px solid #E8EBEE;
@@ -19,13 +21,48 @@
     color: #979797;
     font-size: 20px;
     padding: 0 10px;
+
+    .icon-ic-arrow-right:hover {
+      color: $color-dark;
+    }
   }
 
   .job-description-container {
     width: 100%;
+    padding: 15px 0;
+
+    .job-name {
+      font-size: 17px;
+      font-weight: bold;
+      margin-bottom: 5px;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    .job-description {
+      margin-bottom: 5px;
+    }
+
+    .job-address {
+
+    }
 
     .job-rate {
       width: 35%;
+
+      .total-salary {
+        color: $color-pink-2;
+        font-size: 21px;
+        font-weight: 600;
+        white-space: nowrap;
+      }
+
+      .salary-per-hour {
+        font-size: 16px;
+        white-space: nowrap;
+      }
     }
   }
 
