--- a/app/components/pager/pager.component.html
+++ b/app/components/pager/pager.component.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="pager-container text-center">
   <div class="pager-button clickable" (click)="onFirstPageButtonClick()"><i class="icon-ic-arrow-left"></i><i class="icon-ic-arrow-left additional-arrow"></i></div>
   <div class="pager-button clickable" (click)="onPreviousPageButtonClick()"><i class="icon-ic-arrow-left"></i></div>
   <div class="pager-button clickable" (click)="onNextPageButtonClick()"><i class="icon-ic-arrow-right"></i></div>
