--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ body {
   background-color: #E8EBEE;
   font-size: $fs-m0;
   color: #333333;
+  height: 100%;
 
   a {
     text-decoration: none;
