--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -17,13 +17,14 @@
   }
 
   .jobs-list-container {
+    min-height: 100vh;
     width: 70%;
     box-shadow: 2px 0px 3px 0px rgba(0, 0, 0, 0.4);
   }
 
   @media (max-width: 1024px) {
     .map-container, .jobs-list-container {
-      float: none;
+      position: relative;
       width: 100%;
     }
   }
