JS-18 create job page, approve page skeleton

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -19,7 +19,7 @@
             </a>
           </div>
           <div class="nav-menu-item clickable" *ngIf="isCompanyUser">
-            <a class="nav-menu-link">
+            <a class="nav-menu-link" routerLink="/job/create">
               <i class="icon-ic-create"></i>
               {{'menu.main.create_assignment' | translate}}
             </a>
