--- a/app/components/slider/slider.component.html
+++ b/app/components/slider/slider.component.html
@@ -1,6 +1,6 @@
 <div class="slider" (window:resize)="onResize()">
   <div class="slider-container" (swipeleft)="onSwipe(true)" (swiperight)="onSwipe(false)">
-      <div *ngFor="let job of jobs" class="item-container">
+      <div *ngFor="let job of jobs" class="item-container clickable" [routerLink]="['/job', job.id]">
         <img  class="company-logo no-select" [src]="(job.company.companyLogo && job.company.companyLogo.imageUrlSmall) || 'assets/images/placeholder-logo.png'">
         <div class="salary-container" *ngIf="isCompanyUser">
           {{job.hourlyPay.rateExcludingVAT * job.hours}} {{job.hourlyPay.currency}}
