--- a/app/components/job-list-item/job-list-item.component.scss
+++ b/app/components/job-list-item/job-list-item.component.scss
@@ -2,7 +2,7 @@
 
 .job-list-container {
   width: 100%;
-  border-bottom: 1px solid #E8EBEE;
+  border-bottom: 1px solid $color-gray-3;
 
   .company-logo-container {
     padding: 18px 0 18px 20px;
@@ -13,7 +13,7 @@
   }
 
   .arrow-container {
-    color: #979797;
+    color: $color-gray-1;
     font-size: 20px;
     padding: 0 10px;
 
