--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,14 @@ body {
     }
   }
 
+  .float-left {
+    float: left;
+  }
+
+  .float-right {
+    float: right;
+  }
+
   .clearfix {
     clear: both;
   }
@@ -261,6 +269,7 @@ body {
     }
 
     .material-label {
+
       position: absolute;
       pointer-events: none;
       left: 12px;
@@ -294,9 +303,12 @@ body {
   }
 
   .rounded-company-logo {
-    border-radius: 50%;
     height: 80px;
     width: 80px;
+  }
+
+  .rounded-image {
+    border-radius: 50%;
     vertical-align: middle;
     box-shadow: inset 0 0 1px 0 rgba(0,0,0,.2);
   }
