--- a/app/components/comments/comments.component.scss
+++ b/app/components/comments/comments.component.scss
@@ -3,6 +3,11 @@
 .comments-container {
   width: 70%;
   margin: 0 auto;
+
+  &.small-addition-padding {
+    padding-bottom: 15px;
+  }
+
   &.addition-padding {
     padding-bottom: 78px;
   }
