JS-45: Add more functionality in job-state-status-bar

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -14,6 +14,7 @@ $color-gray-3: #E8EBEE; // lightGrey
 $color-pink-0: #971057; // berry
 $color-pink-1: #c3106c; // cerice
 $color-pink-2: #E5007D; // pink
+$color-pink-3: #ab0e5f;
 
 $fs-s: 12px;
 $fs-m0: 14px;
