--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -181,6 +181,12 @@ body {
     border-radius: 23px;
     padding: 10px 40px;
     display: inline-block;
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 
     &:hover, &:focus {
       background-color: rgba(0, 0, 0, 0.2);
