--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -187,11 +187,19 @@ body {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    outline: none;
 
     &:hover, &:focus {
       background-color: rgba(0, 0, 0, 0.2);
       opacity: .95;
       color: white;
+      user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      outline: none;
     }
 
     &.small {
