--- a/app/components/candidate-state-status-bar/candidate-state-status-bar.component.html
+++ b/app/components/candidate-state-status-bar/candidate-state-status-bar.component.html
@@ -1,4 +1,4 @@
-<div class="job-status text-center">
+<div class="job-status text-center" *ngIf="userJob && (!userJob.invoice || !userJob.invoice.id)">
   <div class="table" *ngIf="userJob && userJob.accepted && userJob.willPerform">
     <div class="table-row">
       <div class="table-cell">{{'assignment.status.is_successful' | translate: {candidate_name: userJob.user.firstName} }}</div>
@@ -27,7 +27,7 @@
     <button class="button" (click)="onAcceptJobButtonClick()">{{'common.submit' | translate}}</button>
   </div>
 </div>
-<div *ngIf="showCompleteUserJob" class="send-candidate-request-container">
+<div *ngIf="showCompleteUserJob" class="finalize-job-container">
   <div class="job-complete-question-container" *ngIf="!showUserRating">
     <div>{{'assignment.approve.description' | translate}}</div>
     <div>
@@ -39,6 +39,14 @@
     <div>{{'assignment.recommendation.title' | translate: {candidate_name: userJob.user.firstName} }}</div>
     <div>
       <i class="icon-ic-star" [ngClass]="{'red-star': starRating >= number}" *ngFor="let number of [1,2,3,4,5]" (click)="onStarRatingClick(number)"></i>
+    </div>
+    <div>&nbsp;</div>
+    <div class="material-group">
+      <input type="text" id="user-job-comment" [(ngModel)]="userJobComment" name="user-job-comment" class="material-input" [ngClass]="{'not-empty': userJobComment}">
+      <label for="user-job-comment" class="material-label">{{'user.form.phone' | translate}}</label>
+    </div>
+    <div>
+      <button class="button" (click)="onJobDoneButtonClick()">{{'common.submit' | translate}}</button>
     </div>
   </div>
 </div>
