--- a/app/components/job-state-status-bar/job-state-status-bar.component.html
+++ b/app/components/job-state-status-bar/job-state-status-bar.component.html
@@ -20,4 +20,18 @@
   </span>
   <span *ngIf="userJob && userJob.accepted && userJob.willPerform">{{'assignment.status.applicant_approved' | translate: {candidate_name: userJob.user.firstName} }}</span>
 </div>
+<div *ngIf="showCandidateBankAccountDetails" class="candidate-bank-account-details-container">
+  <div>{{'common.congratulation' | translate}}</div>
+  <div>{{job.company.name}} {{'assignment.status.company.approve_user' | translate}}</div>
+  <div>{{'assignment.status.offer.approve' | translate}}</div>
+  <div>
+    <input id="accept-terms" type="checkbox">
+    <label for="accept-terms">{{'terms.frilans_finans.accept' | translate}}</label>
+    <span><a href="">{{'terms' | translate}}</a></span>
+  </div>
+  <div>
+    <button class="button">{{'common.yes' | translate}}</button>
+    <button class="button" (click)="showCandidateBankAccountDetails = false">{{'common.no' | translate}}</button>
+  </div>
+</div>
 
