JS-12 my-job pages implementation for users and company

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,7 +7,7 @@
         <div class="nav-menu-icon-container"><i class="icon-ic-just-arrived-logo"></i></div>
         <div class="nav-menu-item-container">
           <div class="nav-menu-item clickable" *ngIf="user">
-            <a class="nav-menu-link">
+            <a class="nav-menu-link" routerLink="/my-jobs">
               <i class="icon-ic-my-jobs"></i>
               {{'menu.main.my_assignment' | translate}}
             </a>
