JS-45: Remove button style to be visible everywhere

--- a/app/components/candidate-state-status-bar/candidate-state-status-bar.component.html
+++ b/app/components/candidate-state-status-bar/candidate-state-status-bar.component.html
@@ -43,7 +43,7 @@
     <div>&nbsp;</div>
     <div class="material-group">
       <input type="text" id="user-job-comment" [(ngModel)]="userJobComment" name="user-job-comment" class="material-input" [ngClass]="{'not-empty': userJobComment}">
-      <label for="user-job-comment" class="material-label">{{'user.form.phone' | translate}}</label>
+      <label for="user-job-comment" class="material-label">{{'assignment.recommendation.description' | translate}}</label>
     </div>
     <div>
       <button class="button" (click)="onJobDoneButtonClick()">{{'common.submit' | translate}}</button>
