--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -12,7 +12,7 @@ $color-gray-2: #c8cdd2; // midgrey
 $color-gray-3: #E8EBEE; // lightGrey
 
 $color-pink-0: #971057; // berry
-$color-pink-1: #c3106c; // cerice
+$color-pink-1: #E5007D; // cerice
 $color-pink-2: #E5007D; // pink
 $color-pink-3: #ab0e5f;
 
