Updated colors according to the colour scheme on the style guide

--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -8,7 +8,7 @@
 
 .footer, .header {
   width: 100%;
-  background: $color-blue-0;
+  background: $color-secondary-gray;
   color: white;
 }
 
@@ -79,7 +79,7 @@
   .nav-language-icon {
     font-size: 9px;
     border-radius: 50%;
-    background: $color-pink-2;
+    background: $color-primary-cerise;
     width: 27px;
     text-align: center;
     vertical-align: center;
@@ -201,7 +201,7 @@
     }
 
     .nav-menu-icon-container {
-      color: $color-dark;
+      color: $color-secondary-gray;
       font-size: 105px;
       padding: 20px 0;
       line-height: 1em;
@@ -224,7 +224,7 @@
 
           .nav-menu-link {
             text-decoration: none;
-            color: $color-blue-3;
+            color: $color-blue-200;
             padding-left: 40px;
 
             &:hover {
