--- a/app/views/confirmation/confirmation.component.scss
+++ b/app/views/confirmation/confirmation.component.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: $color-blue-1;
+  background: $color-secondary-gray;
   z-index: 10000;
   color: white;
 
@@ -17,7 +17,7 @@
 
     .icon-ic-check2 {
       font-size: 30px;
-      color: $color-blue-3;
+      color: $color-blue-200;
     }
 
     .item-title {
