--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -2,7 +2,7 @@
 
 .find-job-header {
   padding: 30px;
-  background: $color-blue-1;
+  background: $color-secondary-gray;
   color: white;
   font-size: 22px;
 }
