--- a/app/views/my-jobs/my-jobs.component.scss
+++ b/app/views/my-jobs/my-jobs.component.scss
@@ -19,7 +19,7 @@
         cursor: pointer;
 
         &.selected {
-          border-bottom: 5px solid $color-pink-2;
+          border-bottom: 5px solid $color-primary-cerise;
         }
       }
     }
