--- a/app/components/comments/comments.component.scss
+++ b/app/components/comments/comments.component.scss
@@ -38,7 +38,7 @@
 
       .comment-body {
         border-radius: 5px;
-        background: $color-gray-2;
+        background: $color-gray-100;
         padding: 10px 15px;
         margin-top: 5px;
         word-wrap: break-word;
@@ -72,12 +72,12 @@
     [contenteditable=true]:empty:before{
       content: attr(placeholder);
       display: block; /* For Firefox */
-      color: $color-gray-1;
+      color: $color-gray-200;
     }
 
     .resizable-div {
       border-radius: 5px;
-      border: 1px solid $color-gray-2;
+      border: 1px solid $color-gray-100;
       padding: 10px;
       word-break: break-all;
     }
@@ -87,7 +87,7 @@
     padding-left: 9px;
 
     .comment-send-button {
-      color: $color-blue-2;
+      color: $color-secondary-blue;
       font-weight: 700;
       border: 0;
       background: none;
@@ -96,7 +96,7 @@
       outline: none;
 
       &:disabled {
-        color: $color-gray-2;
+        color: $color-gray-100;
         cursor: default;
       }
     }
