--- a/app/components/pager/pager.component.scss
+++ b/app/components/pager/pager.component.scss
@@ -7,7 +7,7 @@
     background: none;
     border: 0;
     display: inline-block;
-    color: $color-dark;
+    color: $color-secondary-gray;
     opacity: 0.3;
     position: relative;
     width: 35px;
