--- a/app/components/slider/slider.component.scss
+++ b/app/components/slider/slider.component.scss
@@ -29,7 +29,7 @@
     .salary-container {
       color: white;
       font-size: 20px;
-      background: $color-pink-1;
+      background: $color-primary-cerise;
       border-radius: 0 0 5px 5px;
       height: 30px;
       line-height: 30px;
